JPEG images and hrefs to projects

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row">
             <div class="mobile-menu-inner">
                 <ul class="nav-mobile">
-                    <li><a class="selected" href="#works">Works</a></li>
+                    <li><a class="selected" href="#works">Work</a></li>
                     <li><a href="#whatwedo">Services</a></li>
                     <li><a href="#team">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -66,7 +66,7 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="#team">About</a></li>
             <li><a href="#whatwedo">Services</a></li>
-            <li><a class="selected" href="#works">Works</a></li>
+            <li><a class="selected" href="#works">Work</a></li>
         </ul>
     </nav>
 </div>
@@ -132,7 +132,7 @@
             <!-- PHOTO -->
             <li class="item android"><a
                     onclick="$('#portfolio3').slideDown(); $('#portfolio1, #portfolio2, #portfolio4, #portfolio5, #portfolio6, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="img/projects/android-weather.png" alt="WeatherMap - Forecast for your places">
+                    src="img/projects/android-weather.jpg" alt="WeatherMap - Forecast for your places">
 
                 <div>
                     <h5>WeatherMap</h5>
@@ -143,7 +143,7 @@
             <!-- PHOTO -->
             <li class="item android"><a
                     onclick="$('#portfolio4').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio5, #portfolio6, #portfolio7, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="img/projects/android-gpscounter.png" alt="GPS Counter">
+                    src="img/projects/android-gpscounter.jpg" alt="GPS Counter">
 
                 <div>
                     <h5>GPS Counter</h5>
@@ -176,7 +176,7 @@
             <!-- PHOTO -->
             <li class="item web"><a
                     onclick="$('#portfolio7').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6, #portfolio8, #portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="img/projects/web-sh.png" alt="StudentHunter - get some job">
+                    src="img/projects/web-sh.jpg" alt="StudentHunter - get some job">
 
                 <div>
                     <h5>StudentHunter</h5>
@@ -198,7 +198,7 @@
             <!-- PHOTO -->
             <li class="item wp"><a
                     onclick="$('#portfolio9').slideDown(); $('#portfolio1, #portfolio2, #portfolio3, #portfolio4, #portfolio5, #portfolio6, #portfolio7, #portfolio8').slideUp(); $('html, body').animate({scrollTop: $('#portfolio_detail').offset().top }, 800);"><img
-                    src="img/projects/wp-pwrinfo.png" alt="PWrInfo - University news">
+                    src="img/projects/wp-pwrinfo.jpg" alt="PWrInfo - University news">
 
                 <div>
                     <h5>PWrInfo</h5>
@@ -218,14 +218,10 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio1').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>My Guide</h3>
+                <p>This is an iOS application for tourists visiting ZOO in Wrocław.<br>
+                    It contains useful information and interactive guide.</p>
+                <a href="https://github.com/blstream/MyGuide" target="_blank"><img src="img/projects/ios-myguide.png" alt="My Guide"></a>
             </div>
         </div>
 
@@ -234,14 +230,11 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio2').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>Urban Game</h3>
+                <p>This Android application is used for playing games in your city.<br>
+                    It allows you to score points, complete achievements and challenge your friends.
+                </p>
+                <a href="https://github.com/blstream/UrbanGame" target="_blank"><img src="img/projects/android-urbangame.jpg" alt="Urban Game"></a>
             </div>
         </div>
 
@@ -250,14 +243,9 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio3').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>Weather App</h3>
+                <p>Yet another weather application for Android.</p>
+                <a href="https://play.google.com/store/apps/details?id=fourth.task.android" target="_blank"><img src="img/projects/android-weather.jpg" alt="Weather App"></a>
             </div>
         </div>
 
@@ -266,14 +254,11 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio4').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>GPS Counter</h3>
+                <p>Usefull application when visiting other cities.<br>
+                    No more worries where you left your car. You'll find it easily now.
+                </p>
+                <a href="https://play.google.com/store/apps/details?id=gps.counter" target="_blank"><img src="img/projects/android-gpscounter.jpg" alt="GPS Counter"></a>
             </div>
         </div>
 
@@ -282,14 +267,11 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio5').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>Kiedy Kasa</h3>
+                <p>When I'll have the money? Has someone posted a transfer for you?<br>
+                    Now you can check, when it appears on your bank account.
+                </p>
+                <a href="https://play.google.com/store/apps/details?id=kiedy.kasa" target="_blank"><img src="img/projects/android-kiedykasa.png" alt="Kiedy Kasa"></a>
             </div>
         </div>
 
@@ -298,14 +280,11 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio6').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>PWr Rss Reader</h3>
+                <p>Want to be informed about university events?<br>
+                    This application aggregates all news from Politechnika Wrocławska so that you'll never miss anything.
+                </p>
+                <a href="https://play.google.com/store/apps/details?id=pwr.rss.reader" target="_blank"><img src="img/projects/web-pwrrssreader.jpg" alt="PWr Rss Reader"></a>
             </div>
         </div>
 
@@ -314,14 +293,14 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio7').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>Student Hunter</h3>
+                <p>Want to have some job without experience?<br>
+                    Want to have some experience without permanent job?<br>
+                    Have some tasks to conduct but no people to done them?<br>
+                    Look for some people for your project?<br>
+                    This portal solves all of your problems.
+                </p>
+                <a href="https://studenthunter.herokuapp.com/" target="_blank"><img src="img/projects/web-sh.jpg" alt="Student Hunter"></a>
             </div>
         </div>
 
@@ -330,14 +309,11 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio8').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>Licznik GPS</h3>
+                <p>You can now share your location with your friends.<br>
+                    They will find you easily, whenever you are.
+                </p>
+                <a href="http://www.windowsphone.com/pl-pl/store/app/licznikgps/a8456aaa-fdcf-4746-8dba-5ab73bc5c737" target="_blank"><img src="img/projects/wp-gpscounter.png" alt="Licznik GPS"></a>
             </div>
         </div>
 
@@ -346,14 +322,11 @@
             <div class="seven columns centered">
                 <img class="closeit" src="img/close.png" alt="Close Project"
                      onclick="$('#portfolio9').slideUp(); $('html, body').animate({scrollTop: $('#works').offset().top -70 }, 800);">
-
-                <h3>FLAT STUDIO</h3>
-
-                <p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin
-                    bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can
-                    not only
-                    work but also have fun and learn.</p>
-                <img src="http://placehold.it/700x700" alt="EXAMPLE">
+                <h3>PWr Info</h3>
+                <p>News feed form your university and student governments.<br>
+                    Latest info about what's going on at Politechnika Wrocławska.
+                </p>
+                <a href="http://www.windowsphone.com/pl-pl/store/app/pwrinfo/e25cfc13-4823-4727-8a44-d37e66298319" target="_blank"><img src="img/projects/wp-pwrinfo.jpg" alt="PWr Info"></a>
             </div>
         </div>
 
