--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="css/gumby.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/metrize.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     <link rel="stylesheet" href="css/hoverex-all.css"><!-- Hover Info on Member /-->
 
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -551,10 +552,10 @@
         <div class="twelve columns centered">
 
             <!-- CONTACT FORM -->
-            <form name="htmlform" method="post" action="form_sender.php">
+            <form id="contact-form" name="htmlform" method="post" action="#">
                 <div class="five columns">
                     <input type="text" name="name" placeholder="YOUR NAME" required>
-                    <input type="text" name="phone" placeholder="YOUR PHONE" required>
+                    <input type="text" name="subject" placeholder="SUBJECT" required>
                     <input type="email" name="email" placeholder="YOUR E-MAIL" required>
                 </div>
                 <div class="seven columns">
@@ -620,6 +621,7 @@
 <script src="js/jquery.hoverdir.min.js" type="text/javascript"></script><!-- Filter Works -->
 <script src="js/jquery.isotope.min.js" type="text/javascript"></script><!-- Also for Filter Works -->
 <script src="js/jquery.hoverex.min.js" type="text/javascript"></script><!-- Hoverex for social icon on member -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
 
 <script>
