--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a href="#whatwedo">Services</a></li>
                     <li><a href="#team">About</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="#">CV</a></li>
+                    <li><a href="files/KamilLelonek_CV_EN.pdf">CV</a></li>
                 </ul>
             </div>
         </div>
@@ -63,7 +63,7 @@
     <nav class="row">
         <div id="logo"><a href="#"><img alt="YOURLOGO" src="img/logo.png"></a></div>
         <ul id="nav">
-            <li><a href="#">CV</a></li>
+            <li><a href="files/KamilLelonek_CV_EN.pdf">CV</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#team">About</a></li>
             <li><a href="#whatwedo">Services</a></li>
@@ -89,7 +89,7 @@
 <!-- Title /-->
 <div class="row">
     <div class="twelve columns">
-        <h3>Latest projects</h3>
+        <h3>Projects</h3>
     </div>
 </div>
 
@@ -340,7 +340,7 @@
 <section id="interblock">
     <div class="row">
         <div class="nine columns">
-            <h2>The most important thing is to continuously improve.</h2>
+            <h2>The most important thing for me is to continuously improve.</h2>
 
             <p>Let me show you what I do.</p>
         </div>
@@ -370,7 +370,7 @@
                 <div class="nine columns">
                     <h3>Android</h3>
 
-                    <p>I develop Android applications. This is the platform I like the most.<br>
+                    <p>I develop Android applications, it’s the platform I like the most..<br>
                         I use both Android Studio and Eclipse, ANT and Gradle.<br>
                         For my work I prefer Scala rather than Java.
                     </p>
@@ -385,7 +385,7 @@
                 <div class="nine columns">
                     <h3>iOS</h3>
 
-                    <p>I create iOS applications. Both professionally and for fun.<br>
+                    <p>I create iOS applications, both professionally and for fun.<br>
                        I use Objective-C and RubyMotion, XCode and Terminal, Storyboards and code.<br>
                        I like Apple hardware.
                     </p>
@@ -415,9 +415,9 @@
                 <div class="nine columns">
                     <h3>Frontend</h3>
 
-                    <p>I love frontend technology and working on client side, even JavaScript (i.e. CoffeeScript).<br>
-                        My experience contains: HTML5, Jade, CSS3, Sass, AngularJS, ReactJS.<br>
-                        Tools that I use are brunch.io and NodeJS.
+                    <p>I love frontend technology and working on the client side, even JavaScript (i.e. CoffeeScript).<br>
+                        My experience includes HTML5, Jade, CSS3, Sass, AngularJS, ReactJS.<br>
+                        Tools I use include brunch.io and NodeJS.
                     </p>
                 </div>
             </li>
@@ -430,9 +430,9 @@
                 <div class="nine columns">
                     <h3>Backend and Server</h3>
 
-                    <p>Working on backend is the most exciting from all of the above.<br>
+                    <p>For me, working on the backend is the most exciting.<br>
                         I like to play with different languages and frameworks.<br>
-                        So far I've tried: Scala - Play! and Spray.io, Ruby - RoR and Sinatra, Java - JEE and Struts.
+                        I have experience with Scala - Play! and Spray.io, Ruby - RoR and Sinatra, Java - JEE and Struts.
                     </p>
                 </div>
             </li>
@@ -448,7 +448,7 @@
 <!-- Title /-->
 <div class="row">
     <div class="twelve columns">
-        <h3>Companies that I cooperate with</h3>
+        <h3>Positions I have held</h3>
     </div>
 </div>
 
@@ -531,8 +531,8 @@
 <section id="getit">
     <div class="row">
         <div class="twelve columns centered">
-            <h2>Want to see my full CV?</h2>
-            <a class="buttom" href="#">Click and get it!</a>
+            <h2>Want to veify my competencies?</h2>
+            <a class="buttom" href="https://www.flickr.com/photos/126433320@N02/sets/72157645555236048/" target="_blank">Click and get it!</a>
         </div>
     </div>
 </section>
@@ -574,7 +574,7 @@
     <div class="row">
         <div class="eight columns">
             <h2>Thank you for taking the time to look at my portfolio.</h2>
-            <p>Please feel free to contact me for any further information.</p>
+            <p>Please feel free to contact me for any further inquiries.</p>
         </div>
 
         <!-- Social Icon /-->
