--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 <section id="getit">
     <div class="row">
         <div class="twelve columns centered">
-            <h2>Want to veify my competencies?</h2>
+            <h2>Want to verify my competencies?</h2>
             <a class="buttom" href="https://www.flickr.com/photos/126433320@N02/sets/72157645555236048/" target="_blank">Click and get it!</a>
         </div>
     </div>
