--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a href="#whatwedo">Services</a></li>
                     <li><a href="#team">About</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="files/KamilLelonek_CV_EN.pdf">CV</a></li>
+                    <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
                 </ul>
             </div>
         </div>
@@ -61,9 +61,9 @@
 <!-- NAVIGATION ############################################### -->
 <div class="cbp-af-header">
     <nav class="row">
-        <div id="logo"><a href="#"><img alt="YOURLOGO" src="img/logo.png"></a></div>
+        <div id="logo"><a href="#"><img alt="Kamil Lelonek" src="img/logo.png"></a></div>
         <ul id="nav">
-            <li><a href="files/KamilLelonek_CV_EN.pdf">CV</a></li>
+            <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#team">About</a></li>
             <li><a href="#whatwedo">Services</a></li>
