--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 <script src="js/jquery.isotope.min.js" type="text/javascript"></script><!-- Also for Filter Works -->
 <script src="js/jquery.hoverex.min.js" type="text/javascript"></script><!-- Hoverex for social icon on member -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
+<script src="js/main.min.js" type="text/javascript"></script>
 
 <script>
     window._gaq = [
