--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <h3>Windows Phone</h3>
 
                     <p>I have experience in creating WindowsPhone applications.<br>
-                       I used to write Windows 8 desktop and tablet apps too.<br>
+                       I wrote Windows 8 desktop and tablet apps too.<br>
                        Windows is the best system ever.
                     </p>
                 </div>
