--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="css/gumby.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/metrize.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+    <link rel="stylesheet" href="css/toastr.min.css">
     <link rel="stylesheet" href="css/hoverex-all.css"><!-- Hover Info on Member /-->
 
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -46,10 +46,10 @@
         <div class="row">
             <div class="mobile-menu-inner">
                 <ul class="nav-mobile">
-                    <li><a class="selected" href="#works">Work</a></li>
-                    <li><a href="#whatwedo">Services</a></li>
-                    <li><a href="#team">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a class="smooth-scrool selected" href="#works">Work</a></li>
+                    <li><a class="smooth-scrool" href="#whatwedo">Services</a></li>
+                    <li><a class="smooth-scrool" href="#team">About</a></li>
+                    <li><a class="smooth-scrool" href="#contact">Contact</a></li>
                     <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
                 </ul>
             </div>
@@ -64,10 +64,10 @@
         <div id="logo"><a href="#"><img alt="Kamil Lelonek" src="img/logo.png"></a></div>
         <ul id="nav">
             <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#team">About</a></li>
-            <li><a href="#whatwedo">Services</a></li>
-            <li><a class="selected" href="#works">Work</a></li>
+            <li><a class="smooth-scrool" href="#contact">Contact</a></li>
+            <li><a class="smooth-scrool" href="#team">About</a></li>
+            <li><a class="smooth-scrool" href="#whatwedo">Services</a></li>
+            <li><a class="smooth-scrool selected" href="#works">Work</a></li>
         </ul>
     </nav>
 </div>
@@ -345,7 +345,7 @@
             <p>Let me show you what I do.</p>
         </div>
         <div class="three columns buttongo">
-            <a href="#whatwedo"><i class='icon' data-icon="&#xe105;"></i></a>
+            <a class="smooth-scrool" href="#whatwedo"><i class='icon' data-icon="&#xe105;"></i></a>
         </div>
     </div>
 </section>
@@ -621,7 +621,7 @@
 <script src="js/jquery.hoverdir.min.js" type="text/javascript"></script><!-- Filter Works -->
 <script src="js/jquery.isotope.min.js" type="text/javascript"></script><!-- Also for Filter Works -->
 <script src="js/jquery.hoverex.min.js" type="text/javascript"></script><!-- Hoverex for social icon on member -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" type="text/javascript"></script>
+<script src="js/toastr.min.js" type="text/javascript"></script>
 <script src="js/main.min.js" type="text/javascript"></script>
 
 <script>
