--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-    <link rel="stylesheet" href="css/gumby.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/metrize.css">
+    <link rel="stylesheet" href="css/gumby.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/metrize.min.css">
     <link rel="stylesheet" href="css/toastr.min.css">
-    <link rel="stylesheet" href="css/hoverex-all.css"><!-- Hover Info on Member /-->
+    <link rel="stylesheet" href="css/hoverex-all.min.css"><!-- Hover Info on Member /-->
 
     <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
