Added new fonts

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
     <link rel="stylesheet" href="css/gumby.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/metrize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.min.css">
     <link rel="stylesheet" href="css/toastr.min.css">
     <link rel="stylesheet" href="css/hoverex-all.min.css"><!-- Hover Info on Member /-->
 
@@ -468,7 +468,7 @@
                 </div>
             </div>
             <h3>Volvo IT</h3>
-            <h4>Java & Android</h4>
+            <h4>Scala & Android</h4>
         </div>
 
         <!-- MEMBER /-->
@@ -519,7 +519,7 @@
                 </div>
             </div>
             <h3>Arkency</h3>
-            <h4>Ruby on Rails</h4>
+            <h4>Rails and RubyMotion</h4>
         </div>
 
     </div>
@@ -572,17 +572,54 @@
 <section id="interblock_footer">
     <div class="row">
         <div class="eight columns">
-            <h2>Thank you for taking the time to look at my portfolio.</h2>
-            <p>Please feel free to contact me for any further inquiries.</p>
+            <h2>Find me on the web</h2>
+            <p>Thank you for taking the time to look at my portfolio.</p>
         </div>
 
         <!-- Social Icon /-->
-        <div class="four columns text-right ">
+        <div id="social-icons" class="four columns text-right ">
             <ul>
-                <li><a href="skype:lelonek.kamil?chat"><i class='icon' data-icon="&#xe037;"></i></a></li> <!-- Skype -->
-                <li><a href="http://blog.arkency.com/by/squixy/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a></li> <!-- Blog -->
-                <li><a href="https://www.linkedin.com/profile/view?id=218349598" target="_blank"><i class='icon' data-icon="&#xe03e;"></i></a></li> <!-- Linkedin -->
-                <li><a href="https://github.com/KamilLelonek?tab=repositories" target="_blank"><i class='icon' data-icon="&#xe601;"></i></a></li> <!-- Github -->
+                <li><a href="skype:lelonek.kamil?chat">
+                        <span class="icon-skype"></span>
+                    </a>
+                </li> <!-- Skype -->
+                <li>
+                    <a href="http://blog.arkency.com/by/squixy" target="_blank">
+                        <span class="icon-arkency"></span>
+                    </a>
+                </li> <!-- Arkency -->
+                <li>
+                    <a href="https://www.linkedin.com/profile/view?id=218349598" target="_blank">
+                        <span class="icon-linkedin"></span>
+                    </a>
+                </li> <!-- Linkedin -->
+                <li>
+                    <a href="https://github.com/KamilLelonek?tab=repositories" target="_blank">
+                        <span class="icon-github"></span>
+                    </a>
+                </li> <!-- Github -->
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://twitter.com/KamilLelonek" target="_blank">
+                        <span class="icon-twitter"></span>
+                    </a>
+                </li> <!-- Twitter -->
+                <li>
+                    <a href="http://stackoverflow.com/users/1313175/squixy" target="_blank">
+                        <span class="icon-stackoverflow"></span>
+                    </a>
+                </li> <!-- StackOverflow -->
+                <li>
+                    <a href="https://medium.com/@KamilLelonek" target="_blank">
+                        <span class="icon-medium"></span>
+                    </a>
+                </li> <!-- Medium -->
+                <li>
+                    <a href="https://www.reddit.com/user/squixy" target="_blank">
+                        <span class="icon-reddit"></span>
+                    </a>
+                </li> <!-- Reddit -->
             </ul>
         </div>
     </div>
