--- a/index.html
+++ b/index.html
@@ -10,22 +10,41 @@
 <!--[if gt IE 9]><!-->
 <html class="no-js" lang="en" itemscope itemtype="http://schema.org/Product"> <!--<![endif]-->
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Kamil Lelonek online portfolio</title>
-    <meta name="description" content=""/>
-    <meta name="keywords" content="portfolio,programming,web,mobile,development"/>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <meta name="description" content="Kamil Lelonek personal portfolio, website and blog"/>
+    <meta name="keywords" content="portfolio,programming,web,mobile,development,blog,kamil,lelonek"/>
     <meta name="author" content="humans.txt">
 
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon"/>
 
-    <!-- Google Authorship and Publisher Markup -->
-    <link rel="author" href="https://plus.google.com/+SquixySln/posts"/>
-    <link rel="publisher" href="https://plus.google.com/+SquixySln"/>
-
     <!-- Google+ Metadata /-->
+    <link rel="author" href="https://plus.google.com/+SquixySln/"/>
+    <link rel="publisher" href="https://plus.google.com/+SquixySln"/>
     <meta itemprop="name" content="Kamil Lelonek">
-    <meta itemprop="description" content="Kamil Lelonek online portfolio">
+    <meta itemprop="description" content="Kamil Lelonek personal portfolio, website and blog">
     <meta itemprop="image" content="http://lelonek.me/images/me.jpg">
+
+    <!-- Social: Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@KamilLelonek">
+    <meta name="twitter:creator" content="KamilLelonek">
+    <meta name="twitter:title" content="Kamil Lelonek personal portfolio, website and blog">
+    <meta name="twitter:description" content="Kamil Lelonek personal portfolio, website and blog">
+    <meta name="twitter:image:src" content="http://lelonek.me/images/me.jpg">
+
+    <!-- Social: Facebook / Open Graph -->
+    <meta property="fb:admins" content="100009135707088">
+    <meta property="og:url" content="http://lelonek.me/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Kamil Lelonek personal portfolio, website and blog">
+    <meta property="og:image" content="http://lelonek.me/images/me.jpg"/>
+    <meta property="og:description" content="Kamil Lelonek personal portfolio, website and blog">
+    <meta property="og:site_name" content="KamilLelonek">
+    <meta property="article:author" content="https://www.facebook.com/lelonek.kamil">
+    <meta property="article:publisher" content="https://www.facebook.com/lelonek.kamil">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
