--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <link rel="stylesheet" href="css/gumby.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/metrize.css">
     <link rel="stylesheet" href="css/fonts.min.css">
     <link rel="stylesheet" href="css/toastr.min.css">
     <link rel="stylesheet" href="css/hoverex-all.min.css"><!-- Hover Info on Member /-->
@@ -96,7 +97,7 @@
     <div class="row">
         <div class="twelve columns centered">
             <h2 class="fade-it2">My name is Kamil Lelonek</h2>
-            <p class="lead fade-it2">and I'm a full-stack developer</p>
+            <p class="lead fade-it2">and I'm a full-stack developer, polyglot programmer</p>
         </div>
     </div>
 </section>
@@ -107,7 +108,7 @@
 <!-- Title /-->
 <div class="row">
     <div class="twelve columns">
-        <h3>Projects</h3>
+        <h3>My Projects</h3>
     </div>
 </div>
 
@@ -303,7 +304,7 @@
                 <p>Want to be informed about university events?<br>
                     This application aggregates all news from Politechnika Wrocławska so that you'll never miss anything.
                 </p>
-                <a href="https://play.google.com/store/apps/details?id=pwr.rss.reader" target="_blank"><img src="img/projects/web-pwrrssreader.jpg" alt="PWr Rss Reader"></a>
+                <a href="http://pwrrssreader.herokuapp.com/" target="_blank"><img src="img/projects/web-pwrrssreader.jpg" alt="PWr Rss Reader"></a>
             </div>
         </div>
 
@@ -372,7 +373,7 @@
 <!-- SERVICES SECTION ############################################### -->
 <div class="row">
     <div class="twelve columns">
-        <h3>What I do</h3>
+        <h3>My services</h3>
     </div>
 </div>
 
@@ -388,7 +389,7 @@
                 <div class="nine columns">
                     <h3>Android</h3>
 
-                    <p>I develop Android applications, it’s the platform I like the most..<br>
+                    <p>I develop Android applications, it's the platform I like the most.<br>
                         I use both Android Studio and Eclipse, ANT and Gradle.<br>
                         For my work I prefer Scala rather than Java.
                     </p>
@@ -418,7 +419,7 @@
                 <div class="nine columns">
                     <h3>Windows Phone</h3>
 
-                    <p>I have experience in creating WindowsPhone applications.<br>
+                    <p>I have experience in creating WindowsPhone applications since version 7.0.<br>
                        I wrote Windows 8 desktop and tablet apps too.<br>
                        Windows is the best system ever.
                     </p>
@@ -433,9 +434,9 @@
                 <div class="nine columns">
                     <h3>Frontend</h3>
 
-                    <p>I love frontend technology and working on the client side, even JavaScript (i.e. CoffeeScript).<br>
-                        My experience includes HTML5, Jade, CSS3, Sass, AngularJS, ReactJS.<br>
-                        Tools I use include brunch.io and NodeJS.
+                    <p>I love frontend technology and working on the client side using CoffeeScript.<br>
+                        My experience contains of HTML5 &amp; Jade &amp; Slim, CSS3 &amp; Sass, AngularJS &amp; ReactJS.<br>
+                        Tools I use include brunch.io, NodeJS and Middleman.
                     </p>
                 </div>
             </li>
@@ -448,9 +449,9 @@
                 <div class="nine columns">
                     <h3>Backend and Server</h3>
 
-                    <p>For me, working on the backend is the most exciting.<br>
+                    <p>For me, working on the backend is the most exciting thing.<br>
                         I like to play with different languages and frameworks.<br>
-                        I have experience with Scala - Play! and Spray.io, Ruby - RoR and Sinatra, Java - JEE and Struts.
+                        I have experience with Ruby - Ruby on Rails and Sinatra, Scala - Play! and Spray.io, Java - JEE and Struts.
                     </p>
                 </div>
             </li>
@@ -466,7 +467,7 @@
 <!-- Title /-->
 <div class="row">
     <div class="twelve columns">
-        <h3>Positions I have held</h3>
+        <h3>Companies I cooperated with</h3>
     </div>
 </div>
 
@@ -487,7 +488,7 @@
                 </div>
             </div>
             <h3>Volvo IT</h3>
-            <h4>Scala & Android</h4>
+            <h4>Scala &amp; Android</h4>
         </div>
 
         <!-- MEMBER /-->
@@ -539,6 +540,77 @@
             </div>
             <h3>Arkency</h3>
             <h4>Rails and RubyMotion</h4>
+        </div>
+    </div>
+
+    <div class="row">
+
+        <!-- MEMBER /-->
+        <div class="three columns member">
+            <div class="he-wrap tpl3 ">
+                <img src="img/companies/logo-pilot.png" alt="Pilot">
+
+                <div class="he-view">
+                    <div class="info-bottom a0" data-animate="fadeInUp">
+                        <a href="https://www.facebook.com/pilotcreative" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://twitter.com/gorailsgo" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="pilot.co" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                    </div>
+                </div>
+            </div>
+            <h3>Pilot</h3>
+            <h4>Ruby on Rails</h4>
+        </div>
+
+        <!-- MEMBER /-->
+        <div class="three columns member">
+            <div class="he-wrap tpl3 ">
+                <img src="img/companies/logo-telenor.jpg" alt="Telenor">
+
+                <div class="he-view">
+                    <div class="info-bottom a0" data-animate="fadeInUp">
+                        <a href="https://www.facebook.com/telenornorge" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://twitter.com/telenorgroup" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="http://www.telenor.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                    </div>
+                </div>
+            </div>
+            <h3>Telenor</h3>
+            <h4>Android</h4>
+        </div>
+
+        <!-- MEMBER /-->
+        <div class="three columns member">
+            <div class="he-wrap tpl3 ">
+                <img src="img/companies/logo-woumedia.jpg" alt="woumedia">
+
+                <div class="he-view">
+                    <div class="info-bottom a0" data-animate="fadeInUp">
+                        <a href="https://www.facebook.com/pages/woumedia/421432421219556" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://www.linkedin.com/company/woumedia" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="http://woumedia.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                    </div>
+                </div>
+            </div>
+            <h3>woumedia</h3>
+            <h4>Ruby on Rails</h4>
+        </div>
+
+        <!-- MEMBER /-->
+        <div class="three columns member">
+            <div class="he-wrap tpl3 ">
+                <img src="img/companies/logo-ibm.jpg" alt="ibm">
+
+                <div class="he-view">
+                    <div class="info-bottom a0" data-animate="fadeInUp">
+                        <a href="https://www.facebook.com/IBM" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
+                        <a href="https://twitter.com/ibm" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
+                        <a href="http://www.ibm.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                    </div>
+                </div>
+            </div>
+            <h3>IBM</h3>
+            <h4>Web &amp; Mobile</h4>
         </div>
 
     </div>
