Replaced blog icon with website

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 </div>
             </div>
             <h3>BLStream</h3>
-            <h4>Android & iOS</h4>
+            <h4>Android &amp; iOS</h4>
         </div>
 
         <!-- MEMBER /-->
@@ -534,7 +534,7 @@
                     <div class="info-bottom a0" data-animate="fadeInUp">
                         <a href="https://www.facebook.com/ArkencyCom" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
                         <a href="https://twitter.com/arkency" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
-                        <a href="http://blog.arkency.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                        <a href="http://blog.arkency.com/" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
@@ -554,7 +554,7 @@
                     <div class="info-bottom a0" data-animate="fadeInUp">
                         <a href="https://www.facebook.com/pilotcreative" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
                         <a href="https://twitter.com/gorailsgo" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
-                        <a href="pilot.co" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                        <a href="pilot.co" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
@@ -571,7 +571,7 @@
                     <div class="info-bottom a0" data-animate="fadeInUp">
                         <a href="https://www.facebook.com/telenornorge" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
                         <a href="https://twitter.com/telenorgroup" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
-                        <a href="http://www.telenor.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                        <a href="http://www.telenor.com/" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
@@ -588,7 +588,7 @@
                     <div class="info-bottom a0" data-animate="fadeInUp">
                         <a href="https://www.facebook.com/pages/woumedia/421432421219556" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
                         <a href="https://www.linkedin.com/company/woumedia" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
-                        <a href="http://woumedia.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                        <a href="http://woumedia.com/" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
@@ -605,7 +605,7 @@
                     <div class="info-bottom a0" data-animate="fadeInUp">
                         <a href="https://www.facebook.com/IBM" target="_blank"><i class="icon" data-icon="&#xe045;"></i></a>
                         <a href="https://twitter.com/ibm" target="_blank"><i class='icon' data-icon="&#xe033;"></i></a>
-                        <a href="http://www.ibm.com/" target="_blank"><i class='icon' data-icon="&#xe04c;"></i></a>
+                        <a href="http://www.ibm.com/" target="_blank"><i class='icon' data-icon="&#xe001;"></i></a>
                     </div>
                 </div>
             </div>
