Added slideshare in place of skype

--- a/index.html
+++ b/index.html
@@ -670,10 +670,10 @@
         <!-- Social Icon /-->
         <div id="social-icons" class="four columns text-right ">
             <ul>
-                <li><a href="skype:lelonek.kamil?chat">
-                        <span class="icon-skype"></span>
+                <li><a href="http://www.slideshare.net/squixy/">
+                        <span class="icon-slideshare"></span>
                     </a>
-                </li> <!-- Skype -->
+                </li> <!-- Slideshare -->
                 <li>
                     <a href="http://blog.arkency.com/by/squixy" target="_blank">
                         <span class="icon-arkency"></span>
