--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     <li><a class="smooth-scrool" href="#whatwedo">Services</a></li>
                     <li><a class="smooth-scrool" href="#team">About</a></li>
                     <li><a class="smooth-scrool" href="#contact">Contact</a></li>
-                    <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
+                    <li><a href="https://medium.com/@KamilLelonek" target="_blank">Blog</a></li>
+                    <!-- <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li> -->
                 </ul>
             </div>
         </div>
@@ -82,7 +83,8 @@
     <nav class="row">
         <div id="logo"><a href="#"><img alt="Kamil Lelonek" src="img/logo.png"></a></div>
         <ul id="nav">
-            <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
+            <!-- <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li> -->
+            <li><a href="https://medium.com/@KamilLelonek" target="_blank">Blog</a></li>
             <li><a class="smooth-scrool" href="#contact">Contact</a></li>
             <li><a class="smooth-scrool" href="#team">About</a></li>
             <li><a class="smooth-scrool" href="#whatwedo">Services</a></li>
