Added Blog iframe

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <li><a class="smooth-scrool" href="#whatwedo">Services</a></li>
                     <li><a class="smooth-scrool" href="#team">About</a></li>
                     <li><a class="smooth-scrool" href="#contact">Contact</a></li>
-                    <li><a href="https://medium.com/@KamilLelonek" target="_blank">Blog</a></li>
+                    <li><a class="smooth-scrool" href="#interblock_footer">Blog</a></li>
                     <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
                 </ul>
             </div>
@@ -84,7 +84,7 @@
         <div id="logo"><a href="#"><img alt="Kamil Lelonek" src="img/logo.png"></a></div>
         <ul id="nav">
             <li><a href="files/KamilLelonek_CV_EN.pdf" target="_blank">CV</a></li>
-            <li><a href="https://medium.com/@KamilLelonek" target="_blank">Blog</a></li>
+            <li><a class="smooth-scrool" href="#interblock_footer">Blog</a></li>
             <li><a class="smooth-scrool" href="#contact">Contact</a></li>
             <li><a class="smooth-scrool" href="#team">About</a></li>
             <li><a class="smooth-scrool" href="#whatwedo">Services</a></li>
@@ -716,6 +716,8 @@
             </ul>
         </div>
     </div>
+<script async src="https://static.medium.com/embed.js"></script><a class="m-collection" href="https://medium.com/kamil-lelonek-personal-blog">Kamil Lelonek personal blog</a>
+
 </section>
 <!-- END FOOTER INTERSECTION ############################################### -->
 
