Add Quizzpy project

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
     </div>
     <div class="projects" id="projects-list">
       <div class="projects__item web">
+        <img alt="quizzpy" src="img/portfolio/quizzpy.png">
+      </div>
+      <div class="projects__item web">
         <img alt="contractbook" src="img/portfolio/contractbook.png">
       </div>
       <div class="projects__item web">
@@ -149,11 +152,11 @@
       <div class="projects__item web">
         <img alt="nowthis" src="img/portfolio/nowthis.png">
       </div>
-      <div class="projects__item ios">
+      <div class="projects__item ios hidden">
         <img alt="zoo" src="img/portfolio/zoo.png">
       </div>
       <div class="projects__item ios android hidden">
-        <img alt="unban" src="img/portfolio/urban.png">
+        <img alt="urban" src="img/portfolio/urban.png">
       </div>
       <div class="projects__item android hidden">
         <img alt="kasa" src="img/portfolio/kasa.png">
